--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
+alembic==1.15.2
 blinker==1.9.0
 click==8.1.8
 colorama==0.4.6
 Flask==3.1.0
+Flask-Migrate==3.1.0
 Flask-SQLAlchemy==3.0.3
 Flask-WTF==1.2.2
 greenlet==3.1.1
 importlib_metadata==8.6.1
 itsdangerous==2.2.0
 Jinja2==3.1.6
+Mako==1.3.9
 MarkupSafe==3.0.2
 python-dotenv==1.0.1
 SQLAlchemy==2.0.40
