--- a/.gitignore
+++ b/.gitignore
@@ -58,11 +58,11 @@ coverage.xml
 # Django stuff:
 *.log
 local_settings.py
-db.sqlite3
+instance/db.sqlite3
 db.sqlite3-journal
 
 # Flask stuff:
-instance/
+opinions_app/instance/
 .webassets-cache
 
 # Scrapy stuff:
